# core

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GOVERNANCE.md  GPT.md  README.md
.github/: dependabot.yml
activity/rust/: Cargo.toml  README.md
activity/rust/src/: lib.rs
activity/rust/src/application/: audit_service.rs  mod.rs  ports.rs  timeline_service.rs
activity/rust/src/domain/: audit.rs  mod.rs  shared.rs  timeline.rs
activity/rust/src/infrastructure/: mod.rs
activity/rust/src/infrastructure/id/: mod.rs  random_hex.rs
activity/rust/src/infrastructure/repository/: filesystem.rs  in_memory.rs  mod.rs
activity/rust/tests/: audit_service.rs  timeline_service.rs
ai/: README.md  pyproject.toml
ai/contracts/capabilities/v1/: README.md  capability-manifest.schema.json
ai/contracts/capabilities/v1/examples/: invalid_duplicate_tool.json  invalid_invalid_enum.json  invalid_read_side_effect.json  invalid_secret_config.json  invalid_write_missing_action_type.json  valid_read_only.json  valid_write_governed.json
ai/contracts/go/: README.md  chat.go  chat_test.go  go.mod  notifications.go
ai/contracts/ts/: README.md  package-lock.json  package.json  tsconfig.json
ai/contracts/ts/src/: index.ts
ai/contracts/ts/tests/: contracts.test.ts
ai/go/: CAPABILITY_MANIFEST_V1.md  capabilities.go  capabilities_test.go  contracts.go  contracts_test.go  gemini.go  gemini_test.go  go.mod  llm.go  llm_test.go  ollama.go  ollama_test.go  prompt.go
ai/python/: README.md  pyproject.toml
ai/python/src/: __init__.py  auth.py  contexts.py  fastapi.py  logging.py  rate_limit.py
ai/python/src/ai_core/: __init__.py  auth.py  completions.py  contexts.py  errors.py  fastapi.py  gemini.py  logging.py  orchestrator.py  provider_factory.py  rate_limit.py  resilience.py  types.py
ai/python/src/ai_core/api/: __init__.py
ai/python/src/ai_core/clients/: __init__.py
ai/python/src/ai_core/observability/: __init__.py
ai/python/src/api/: __init__.py
ai/python/src/clients/: http_backend.py
ai/python/src/core_ai/: __init__.py  auth.py  completions.py  contexts.py  errors.py  logging.py  provider_factory.py  rate_limit.py  resilience.py  types.py
ai/python/src/core_ai/api/: __init__.py  app.py  dependencies.py  middleware.py  router.py  sse.py
ai/python/src/core_ai/clients/: __init__.py
ai/python/src/core_ai/config/: __init__.py  llm.py  settings.py
ai/python/src/core_ai/domain/: __init__.py  models.py
ai/python/src/core_ai/observability/: otel.py
ai/python/src/core_ai/providers/: __init__.py  gemini.py
ai/python/src/core_ai/services/: __init__.py  orchestrator.py
ai/python/src/observability/: __init__.py
ai/python/src/runtime/: __init__.py  auth.py  completions.py  contexts.py  http_errors.py  orchestrator.py  provider_factory.py  rate_limit.py  text.py  types.py
ai/python/src/runtime/api/: __init__.py  app.py  dependencies.py  events.py  middleware.py  router.py
ai/python/src/runtime/chat/: __init__.py  blocks.py  contracts.py  stream.py
ai/python/src/runtime/clients/: __init__.py  http_backend.py  review.py
ai/python/src/runtime/config/: llm.py  settings.py
ai/python/src/runtime/domain/: __init__.py  agent.py  capabilities.py  contracts.py
ai/python/src/runtime/memory/: __init__.py  context.py  operational.py  store.py  types.py
ai/python/src/runtime/observability/: __init__.py  otel.py
ai/python/src/runtime/providers/: base.py  echo.py  gemini.py  ollama.py
ai/python/src/runtime/registry/: provider_factory.py
ai/python/src/runtime/services/: agent_router.py  multi_agent_orchestrator.py  orchestrator.py
ai/python/tests/: test_agent_registry.py  test_ai_core_compat.py  test_app.py  test_auth.py  test_capabilities.py  test_completions.py  test_contracts.py  test_http_backend.py  test_llm_config.py  test_logging.py  test_memory.py  test_operational_memory.py  test_orchestrator.py  test_otel.py  test_provider_factory.py  test_rate_limit.py  test_resilience.py  test_review_client.py  test_sse.py
ai/src/core_ai/: __init__.py  orchestrator.py
ai/src/core_ai/api/: app.py  dependencies.py  router.py  schemas.py
ai/src/core_ai/config/: settings.py
ai/src/core_ai/providers/: base.py  echo.py
ai/src/core_ai/registry/: __init__.py  provider_factory.py
ai/tests/: test_orchestrator.py  test_provider_factory.py
artifact/rust/: Cargo.toml  README.md
artifact/rust/src/: lib.rs
artifact/rust/src/application/: attachments_service.rs  mod.rs  ports.rs  tabular_service.rs
artifact/rust/src/domain/: asset.rs  attachments.rs  mod.rs  tabular.rs
artifact/rust/src/infrastructure/: mod.rs
artifact/rust/src/infrastructure/clock/: system_clock.rs
artifact/rust/src/infrastructure/tabular/: mod.rs  xlsx_calamine_codec.rs
artifact/rust/tests/: asset.rs  attachments_service.rs  tabular_service.rs
authn/rust/: Cargo.toml
authn/rust/src/: lib.rs
concurrency/worker/rust/: Cargo.toml
databases/postgres/rust/: Cargo.toml
errors/rust/: Cargo.toml
errors/rust/src/: lib.rs
governance/rust/: Cargo.toml  README.md
governance/rust/src/: lib.rs
governance/rust/src/application/: decision_engine.rs  evidence_service.rs  mod.rs  ports.rs
governance/rust/src/domain/: approval.rs  evidence.rs  mod.rs  model.rs  risk.rs
governance/rust/src/infrastructure/: mod.rs
governance/rust/src/infrastructure/policy/: cel_matcher.rs  deterministic_matcher.rs  mod.rs
governance/rust/src/infrastructure/signing/: hmac_sha256.rs
governance/rust/tests/: approval.rs  cel_policy_matcher.rs  decision_engine.rs  evidence.rs  risk.rs
http/client/rust/: Cargo.toml
http/client/rust/src/: lib.rs
http/python/: README.md  pyproject.toml
http/python/src/core_httpserver/: __init__.py  fastapi_bootstrap.py
http/python/src/httpserver/: __init__.py  errors.py  fastapi_bootstrap.py
http/python/tests/: test_fastapi_bootstrap.py
http/server/rust/: Cargo.toml
http/server/rust/src/: lib.rs
observability/rust/: Cargo.toml
observability/rust/src/: lib.rs
utils/resilience/rust/: Cargo.toml
validate/rust/: Cargo.toml
(+604 files in other folders)
