[package]
name = "authn"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Inbound authentication — JWT (JWKS) + API key verification via traits"

[lib]
name = "authn"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
