[package]
name = "errors"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Domain and HTTP error types with exhaustive matching — replaces domainerr + httperr"

[lib]
name = "errors"
path = "src/lib.rs"

[dependencies]
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
