[package]
name = "core-governance-rust"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Reusable governance kernel in Rust for risk, decision, approval, and evidence flows"

[lib]
name = "core_governance_rust"
path = "src/lib.rs"

[dependencies]
cel = "0.13.0"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
hex = "0.4.3"
hmac = "0.12.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "1.0.69"
