[package]
name = "validate"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure validation utilities — strings, numbers, IDs, time, enums, money, collections"

[lib]
name = "validate"
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
