[package]
name = "worker"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Periodic background worker with graceful shutdown via tokio"

[lib]
name = "worker"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["time", "macros"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
