[package]
name = "core-postgres"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "PostgreSQL connection pool + migrations via sqlx with compile-time query checking"

[lib]
name = "core_postgres"
path = "src/lib.rs"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
