[package]
name = "http_client"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Async HTTP client with retry, dynamic headers, and body size limit"

[lib]
name = "http_client"
path = "src/lib.rs"

[dependencies]
bytes = "1"
resilience = { path = "../../../utils/resilience/rust" }
http = "1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
