[package]
name = "http_server"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Axum HTTP server with security headers, CORS, health endpoints, and graceful shutdown"

[lib]
name = "http_server"
path = "src/lib.rs"

[dependencies]
axum = "0.8"
errors = { path = "../../../errors/rust" }
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["signal", "net"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "set-header"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
