[package]
name = "resilience"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Retry with exponential backoff + async circuit breaker"

[lib]
name = "resilience"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["time"] }
thiserror = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
